--- a/index.html
+++ b/index.html
@@ -379,28 +379,26 @@
                         </div>
                     </div>
                 </div> <!-- end column -->
-              <!-- <div class="column" data-animate-el>
+              <div class="column" data-animate-el>
                     <div class="folio-item">
                         <div class="folio-item__thumb">
-                            <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-tulips.jpg" title="Caffein & Tulips" data-size="1050x700">
-                                <img src="images/portfolio/tulips.jpg" 
-                                     srcset="images/portfolio/tulips.jpg 1x, images/portfolio/tulips@2x.jpg 2x" alt="">
+                            <a class="folio-item__thumb-link" href="images/jared-full.png" Title="Jared's Cellar" data-size="1050x700">
+                                <img src="images/jareds.png" 
+                                     srcset="images/jareds.png 1x, images/jareds.png 2x" alt="">
                             </a>
                         </div>
                         <div class="folio-item__info">
                             <div class="folio-item__meta">
-                                <span class="cat">Web Design</span>
-                                <a href="https://www.behance.net/" title="Project Link" class="project-link">Project Link</a>
+                                <span class="cat">HTML5,CSS3,Javascript</span>
+                                <a href="https://jaredscellar.netlify.app" title="Project Link" class="project-link" target="_blank">View Demo</a>
                             </div>
-                            <h4 class="folio-item__title">
-                                Caffein & Tulips
-                            </h4>
+                            <h4 class="folio-item__title">Jared's Cellar</h4>
                         </div>
                         <div class="folio-item__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>This site was created using HTML5,CSS3, and a pinch of Javascript. <a href="https://jaredscellar.netlify.app" target="_blank">View Demo</a></p>
                         </div>
                     </div>
-                </div> end column -->
+                </div> <!-- end column -->
                 <!--<div class="column" data-animate-el>
                     <div class="folio-item">
                         <div class="folio-item__thumb">
