--- a/index.html
+++ b/index.html
@@ -384,18 +384,18 @@
                         <div class="folio-item__thumb">
                             <a class="folio-item__thumb-link" href="images/jared-full.png" Title="Jared's Cellar" data-size="1050x700">
                                 <img src="images/jareds.png" 
-                                     srcset="images/jareds.png 1x, images/jareds.png 2x" alt="">
+                                     srcset="images/Dee's BackDoor Kitchen.png 1x, images/Dee's BackDoor Kitchen.png 2x" alt="">
                             </a>
                         </div>
                         <div class="folio-item__info">
                             <div class="folio-item__meta">
                                 <span class="cat">HTML5,CSS3,Javascript</span>
-                                <a href="https://jaredscellar.netlify.app" title="Project Link" class="project-link" target="_blank">View Demo</a>
+                                <a href="https://flavorsofdbk.com" title="Project Link" class="project-link" target="_blank">View Demo</a>
                             </div>
-                            <h4 class="folio-item__title">Jared's Cellar</h4>
+                            <h4 class="folio-item__title">Dee's BackDoor Kitchen</h4>
                         </div>
                         <div class="folio-item__caption">
-                            <p>This site was created using HTML5,CSS3, and a pinch of Javascript. <a href="https://jaredscellar.netlify.app" target="_blank">View Demo</a></p>
+                            <p>This site was created using HTML5,CSS3, and a pinch of Javascript. <a href="https://flavorsofdbk.com" target="_blank">View Demo</a></p>
                         </div>
                     </div>
                 </div> <!-- end column -->
