--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@
                     <div class="folio-item">
                         <div class="folio-item__thumb">
                             <a class="folio-item__thumb-link" href="images/jared-full.png" Title="Jared's Cellar" data-size="1050x700">
-                                <img src="images/jareds.png" 
-                                     srcset="images/Dee's BackDoor Kitchen.png 1x, images/Dee's BackDoor Kitchen.png 2x" alt="">
+                                <img src="images/DeesBackDoorKitchen.svg" 
+                                     srcset="images/DeesBackDoorKitchen.svg 1x, images/DeesBackDoorKitchen.svg 2x" alt="">
                             </a>
                         </div>
                         <div class="folio-item__info">
