--- a/index.html
+++ b/index.html
@@ -382,9 +382,9 @@
               <div class="column" data-animate-el>
                     <div class="folio-item">
                         <div class="folio-item__thumb">
-                            <a class="folio-item__thumb-link" href="images/jared-full.png" Title="Jared's Cellar" data-size="1050x700">
-                                <img src="images/DeesBackDoorKitchen.png" 
-                                     srcset="images/DeesBackDoorKitchen.png 1x, images/DeesBackDoorKitchen.png 2x" alt="">
+                            <a class="folio-item__thumb-link" href="images/DeesBackdoorKitchen.jpeg" Title="Dee's Backdoor Kitchen" data-size="1050x700">
+                                <img src="images/DeesBackdoorKitchen.jpeg" 
+                                     srcset="images/DeesBackDoorKitchen.jpeg 1x, images/DeesBackDoorKitchen.jpeg 2x" alt="">
                             </a>
                         </div>
                         <div class="folio-item__info">
